--- a/ToMaZo/ext/manifest.json
+++ b/ToMaZo/ext/manifest.json
@@ -13,16 +13,20 @@
   "browser_action": {
     "default_icon": "icons/icon48.png",
     "default_title": "page action demo",
-    "default_popup": "page_action/page_action.html"
+    "default_popup": "src/page_action/page_action.html"
   },
   "content_scripts": [
     {
       "matches": [
-        "https://www.google.com/*"
+        "https://www.zomato.com/*"
       ],
       "css": [
         "src/inject/inject.css"
-      ]
+      ],
+      "js": [
+        "jquery-3.3.1.min.js", "src/inject/inject.js"
+      ],
+      "run_at": "document_end"
     }
   ]
 }
