Change extension name, description

--- a/ToMaZo/ext/manifest.json
+++ b/ToMaZo/ext/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "Can't figure this out",
+  "name": "ToMaZo",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Warns you when you're ordering without a promo",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
